--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,9 +6,17 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+  </ItemGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\Persistence\Persistence.csproj" />
         <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Activities\Commands\" />
     </ItemGroup>
 
 </Project>
