--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="12.0.1" />
   </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Persistence\Persistence.csproj" />
         <ProjectReference Include="..\Domain\Domain.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Activities\Commands\" />
     </ItemGroup>
 
 </Project>
